--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ bundler_args: --without integration
 rvm:
   - 1.9.3
   - 2.0.0
-script: bundle exec rake travis
+script: bundle exec rake
+branches:
+  only:
+    - master
