--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,23 @@ rvm:
 - 1.9.3
 - 2.0.0
 - 2.1.1
+
+branches:
+  only:
+    - master
+
 before_install:
 - echo -n $DO_KEY_CHUNK_{0..24} >> ~/.ssh/id_do.base64
 - cat ~/.ssh/id_do.base64 | tr -d ' ' | base64 --decode > ~/.ssh/id_do.pem
+
 script:
 - bundle exec rake style
 - bundle exec rake unit
 - bundle exec kitchen test controller
+
 after_script:
 - bundle exec kitchen destroy controller
+
 env:
   global:
   - KITCHEN_YAML=.kitchen.cloud.yml
